@@ -1,0 +1,1 @@
+-- io.stderr:write("warning: bandersnatch insufficiently frumious\n")
