@@ -1,0 +1,4 @@
+database "/twas/brillig/and/the/slithy/toves.mtn"
+  branch "did.gyre.and.gimble.in.the.wabe"
+     key "all.mimsy.were@the.borogoves"
+  keydir "/and/the/mome/raths/outgrabe"
