@@ -1,7 +1,8 @@
 2007-02-09  Zack Weinberg  <zackw@panix.com>
 
 	* tests/workspace_migration: Generalize to support different sorts
-	of migration-needing workspaces.
+	of migration-needing workspaces.  Add new "inodeprints" and
+	"twoparent" tests.
 
 	* cmd_list.cc (ls_known, ls_changed): Work in a two-parent workspace.
 	* tests/two_parent_workspace_list: New test.
